[tool.poetry]
name = "projects"
version = "0.1.0"
description = "Pages about my projects"
authors = ["smrenato <renatosmx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.4"
taskipy = "^1.13.0"
rich = "^13.8.0"
typer = "^0.12.5"
mkdocs-material = "^9.5.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
