[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fontawesome-markdown>=0.2.6",
    "markdown>=3.7",
    "mkdocs-material>=9.5.34",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.9",
    "ruff>=0.6.5",
]
